DHS-469: Minimise set of java 17 exports.