@@ -25,10 +25,6 @@ java {
 // cannot access class sun.nio.ch.DirectBuffer (in module java.base) because module java.base does not
 // export sun.nio.ch to unnamed module @0x76ed5528
 def java17exports = [
-        // TODO: Limit to these to just what is actually required
-        '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
-        '--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED',
-        '--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED',
         '--add-opens=java.base/java.lang=ALL-UNNAMED',
         '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
         '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
@@ -36,28 +32,10 @@ def java17exports = [
         '--add-opens=java.base/java.net=ALL-UNNAMED',
         '--add-opens=java.base/java.nio=ALL-UNNAMED',
         '--add-opens=java.base/java.util=ALL-UNNAMED',
-        '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
-        '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
         '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
         '--add-opens=java.base/sun.nio.cs=ALL-UNNAMED',
         '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
         '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
-        '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
-        '--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED',
-        '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED',
-        '--add-exports=java.base/java.lang=ALL-UNNAMED',
-        '--add-exports=java.base/java.lang.invoke=ALL-UNNAMED',
-        '--add-exports=java.base/java.lang.reflect=ALL-UNNAMED',
-        '--add-exports=java.base/java.io=ALL-UNNAMED',
-        '--add-exports=java.base/java.net=ALL-UNNAMED',
-        '--add-exports=java.base/java.nio=ALL-UNNAMED',
-        '--add-exports=java.base/java.util=ALL-UNNAMED',
-        '--add-exports=java.base/java.util.concurrent=ALL-UNNAMED',
-        '--add-exports=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
-        '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
-        '--add-exports=java.base/sun.nio.cs=ALL-UNNAMED',
-        '--add-exports=java.base/sun.security.action=ALL-UNNAMED',
-        '--add-exports=java.base/sun.util.calendar=ALL-UNNAMED',
 ]
 
 jacoco {
